--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ p {
 }
 
 #showcase {
-    background: #333 url('img/codeShort.jpg') no-repeat center center/cover;
+    background: #333 url('codeShort.jpg') no-repeat center center/cover;
     height: 100vh;
     color: white;
 }
@@ -148,7 +148,7 @@ p {
 }
 .slikaPi {
   
-    background: url('img/rPi.jpg')
+    background: url('rPi.jpg')
     no-repeat center center/cover;
 }
 .txtcuriculum  {
