--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ p {
 }
 
 #showcase {
-    background: #333 url('img/codeShort.jpg') no-repeat center center/cover;
+    background: #333 url('codeShort.jpg') no-repeat center center/cover;
     height: 100vh;
     color: white;
 }
