--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ p {
     flex:1;
 }
 .slikaPi {
-    background: url('img/rPi.jpg')
+    background: url('rPi.jpg')
     no-repeat center center/cover;
 }
 .txtcuriculum  {
